[project]
name = "douyindanmu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.128.0",
    "mysql-connector-python>=9.5.0",
    "protobuf==3.20.3",
    "pydantic>=2.12.5",
    "pyexecjs>=1.5.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "websocket-client>=1.9.0",
]
