[project]
name = "douyindanmu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "curl-cffi>=0.14.0",
    "fastapi>=0.128.0",
    "grpcio-tools>=1.78.0",
    "mysql-connector-python>=9.5.0",
    "protobuf>=5.0.0",
    "pydantic>=2.12.5",
    "pyexecjs>=1.5.1",
    "pyinstaller>=6.18.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "websocket-client>=1.9.0",
    "pymysql"
]
